Fix filter name alignment when icon is missing

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -14,6 +14,7 @@
 
 .cst-btn-div {
   border-radius: 5px;
+  padding: 8px 0;
 }
 
 .map-div .full-box-shadow-p-0 button {
